--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -221,8 +221,8 @@ workflows:
 #            branches:
 #              only: master
           context: keep-dev
-          requires:
-            - build_client_and_test_go
+#          requires:
+#            - build_client_and_test_go
       - publish_docker_images:
           filters:
             branches:
