--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,8 +223,8 @@ workflows:
 #            branches:
 #              only: master
           context: keep-dev
-#          requires:
-#            - build_client_and_test_go
+          requires:
+            - build_client_and_test_go
       - publish_docker_images:
           filters:
             branches:
