--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -218,6 +218,7 @@ workflows:
           context: keep-dev
           requires:
             - migrate_contracts
+            - build_client_and_test_go
       - migrate_contracts:
 #          filters:
 #            branches:
@@ -226,9 +227,9 @@ workflows:
           requires:
             - build_client_and_test_go
       - publish_docker_images:
-          filters:
-            branches:
-              only: master
+#          filters:
+#            branches:
+#              only: master
           context: keep-dev
           requires:
             - build_client_and_test_go
