--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -139,6 +139,10 @@ required = ["github.com/gogo/protobuf/protoc-gen-gogoslick", "github.com/ethereu
   name = "github.com/satori/go.uuid"
   revision = "36e9d2ebbde5e3f13ab2e25625fd453271d6522e"
 
+[[override]]
+  name = "go.uber.org/zap"
+  revision = "27376062155ad36be76b0f12cf1572a221d3a48c"
+
 [[constraint]]
   name = "github.com/urfave/cli"
   revision = "8e01ec4cd3e2d84ab2fe90d8210528ffbb06d8ff"
