--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -221,16 +221,16 @@ workflows:
             - migrate_contracts
             - build_client_and_test_go
       - migrate_contracts:
-#          filters:
-#            branches:
-#              only: master
+          filters:
+            branches:
+              only: master
           context: keep-dev
           requires:
             - build_client_and_test_go
       - publish_docker_images:
-#          filters:
-#            branches:
-#              only: master
+          filters:
+            branches:
+              only: master
           context: keep-dev
           requires:
             - build_client_and_test_go
