--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -216,6 +216,9 @@ workflows:
       - build_client_and_test_go:
           context: keep-dev
       - build_initcontainer:
+          filters:
+            branches:
+              only: master
           context: keep-dev
           requires:
             - migrate_contracts
