--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -224,17 +224,17 @@ workflows:
             - migrate_contracts
             - build_client_and_test_go
       - migrate_contracts:
-          filters:
+ #         filters:
  #           branches:
  #             only: master
- #         context: keep-dev
+          context: keep-dev
           requires:
             - build_client_and_test_go
       - publish_docker_images:
-          filters:
+ #         filters:
  #           branches:
  #             only: master
- #        context: keep-dev
+          context: keep-dev
           requires:
             - build_client_and_test_go
             - build_initcontainer
