Lock go-libp2p-bootstrap dependency
Our new go-libp2p-bootstrap dep is in our Gopkg.lock, but we'll take it
a step further and lock it to the most recent commit in our Gopkg.toml.

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -24,6 +24,10 @@ required = ["github.com/gogo/protobuf/protoc-gen-gogoslick", "github.com/ethereu
 
 # libp2p
 [[override]]
+  name = "github.com/keep-network/go-libp2p-bootstrap"
+  revision = "075fbb69e86bc03e32f4555bf8d611ec29f14766"
+
+[[override]]
   name = "github.com/libp2p/go-libp2p-peer"
   revision = "9ccddf5f5d8318b00658dfbc06a4e32b16bae6a9"
 
