Include backend contracts during contract generation

--- a/pkg/chain/gen/Makefile
+++ b/pkg/chain/gen/Makefile
@@ -13,7 +13,7 @@ abigen_files := $(addprefix abi/,$(addsuffix .go,$(contract_stems)))
 # *ImplV1.go files will get generated into clean Keep contract bindings, as will
 # the Staking*.go contract(s). The corresponding contract filenames will drop
 # the ImplV1, if it exists, and live in the contract/ directory.
-clean_contract_stems := $(filter %ImplV1,$(contract_stems)) $(filter Staking%,$(contract_stems))
+clean_contract_stems := $(filter %ImplV1,$(contract_stems)) $(filter %Backend,$(contract_stems)) $(filter Staking%,$(contract_stems))
 contract_files := $(addprefix contract/,$(addsuffix .go,$(subst ImplV1,,$(clean_contract_stems))))
 
 all: gen_contract_go gen_abi_go
@@ -41,4 +41,7 @@ contract/%.go: abi/%ImplV1.abi abi/%ImplV1.go abi/%.go *.tmpl *.go
 	go run ./ $< $@
 
 contract/Staking%.go: abi/Staking%.abi abi/Staking%.go *.tmpl *.go
+	go run ./ $< $@
+
+contract/%Backend.go: abi/%Backend.abi abi/%Backend.go *.tmpl *.go
 	go run ./ $< $@
