Install packages for toml manipulation and bring in templates To work with toml files we need a few packages.  toml allows us to create JS objects from a toml file, tomlify allows us to create toml files from JS objects.  Concat is needed to stream data to toml as it doesn't have a streaming built-in.

--- a/infrastructure/kube/templates/keep-client/initcontainer/provision-keep-client/Dockerfile
+++ b/infrastructure/kube/templates/keep-client/initcontainer/provision-keep-client/Dockerfile
@@ -3,6 +3,9 @@ FROM node:11 AS runtime
 WORKDIR /tmp
 
 RUN npm install web3@1.0.0-beta.55
+RUN npm install concat-stream@2.0.0
+RUN npm install toml@3.0.0
+RUN npm install tomlify-j0.4@3.0.0
 
 ARG CONTRACT_OWNER_ETH_ACCOUNT_ADDRESS
 ENV CONTRACT_OWNER_ETH_ACCOUNT_ADDRESS=$CONTRACT_OWNER_ETH_ACCOUNT_ADDRESS
@@ -20,6 +23,11 @@ COPY ./StakingProxy.json /tmp/StakingProxy.json
 COPY ./TokenStaking.json /tmp/TokenStaking.json
 COPY ./KeepToken.json /tmp/KeepToken.json
 
+COPY ./keep-client-bootstrap-peer-template.toml /tmp/keep-client-bootstrap-peer-template.toml
+COPY ./keep-client-standard-peer-template.toml /tmp/keep-client-standard-peer-template.toml
+
 COPY ./create-unlock-stake-account.js /tmp/create-unlock-stake-account.js
+
+
 
 ENTRYPOINT ["node", "./create-unlock-stake-account.js"]
