Bake KeepGroup and KeepRandomBeacon contract json We need to get at the aforementioned contract jsons to extract the contract address from the latest migration.  These values are used to populate needed addresses in the keep-client config.

--- a/infrastructure/kube/templates/keep-client/initcontainer/provision-keep-client/Dockerfile
+++ b/infrastructure/kube/templates/keep-client/initcontainer/provision-keep-client/Dockerfile
@@ -22,6 +22,8 @@ ENV ETH_NETWORK_ID=$ETH_NETWORK_ID
 COPY ./StakingProxy.json /tmp/StakingProxy.json
 COPY ./TokenStaking.json /tmp/TokenStaking.json
 COPY ./KeepToken.json /tmp/KeepToken.json
+COPY ./KeepRandomBeacon.json /tmp/KeepRandomBeacon.json
+COPY ./KeepGroup.json /tmp/KeepGroup.json
 
 COPY ./keep-client-bootstrap-peer-template.toml /tmp/keep-client-bootstrap-peer-template.toml
 COPY ./keep-client-standard-peer-template.toml /tmp/keep-client-standard-peer-template.toml
