Set pre-configured values for the boostrap peer

--- a/infrastructure/kube/templates/keep-client/initcontainer/provision-keep-client/keep-client-bootstrap-peer-template.toml
+++ b/infrastructure/kube/templates/keep-client/initcontainer/provision-keep-client/keep-client-bootstrap-peer-template.toml
@@ -1,21 +1,21 @@
 # Configured by Kube. Do not edit by hand, your changes will be lost!
 
 [ethereum]
-	URL = ""
-	URLRPC = ""
+	URL = "Set by Kube"
+	URLRPC = "Set by Kube"
 
   [ethereum.account]
-  	Address = ""
-  	KeyFile = ""
+  	Address = "0xA86c468475EF9C2ce851Ea4125424672C3F7e0C8"
+  	KeyFile = "/mnt/eth-data/eth-account-keyfile"
 
   [ethereum.ContractAddresses]
     # Hex-encoded address of KeepRandomBeacon contract
-    KeepRandomBeacon = ""
+    KeepRandomBeacon = "Set by Kube"
     # Hex-encoded address of KeepGroup contract
-    KeepGroup = ""
+    KeepGroup = "Set by Kube"
     # StakingProxy
-    Staking = ""
+    Staking = "Set by Kube"
 
 [LibP2P]
-  Seed = ""
-  Port = ""
+  Seed = 2
+  Port = 3919
