Rename InitContainer script to something more appropriate

--- a/infrastructure/kube/templates/keep-client/initcontainer/provision-keep-client/Dockerfile
+++ b/infrastructure/kube/templates/keep-client/initcontainer/provision-keep-client/Dockerfile
@@ -32,4 +32,4 @@ COPY ./create-unlock-stake-account.js /tmp/create-unlock-stake-account.js
 
 
 
-ENTRYPOINT ["node", "./create-unlock-stake-account.js"]
+ENTRYPOINT ["node", "./provision-keep-client.js"]
