Call the keyfile by it's name in ConfigMap, easier to track

--- a/infrastructure/kube/keep-dev/keep-client-bootstrap-peer-0.yaml
+++ b/infrastructure/kube/keep-dev/keep-client-bootstrap-peer-0.yaml
@@ -75,8 +75,8 @@ spec:
         configMap:
           name: keep-client-bootstrap-peer-0
           items:
-            - key: eth-account-keyfile
-              path: eth-account-keyfile
+            - key: eth-keyfile
+              path: eth-keyfile
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
