--- a/infrastructure/kube/templates/keep-client/initcontainer/provision-keep-client/Dockerfile
+++ b/infrastructure/kube/templates/keep-client/initcontainer/provision-keep-client/Dockerfile
@@ -13,8 +13,11 @@ ENV CONTRACT_OWNER_ETH_ACCOUNT_ADDRESS=$CONTRACT_OWNER_ETH_ACCOUNT_ADDRESS
 ARG ETH_HOSTNAME
 ENV ETH_HOSTNAME=$ETH_HOSTNAME
 
-ARG ETH_HOST_PORT
-ENV ETH_HOST_PORT=$ETH_HOST_PORT
+ARG ETH_RPC_PORT
+ENV ETH_RPC_PORT=$ETH_RPC_PORT
+
+ARG ETH_WS_PORT
+ENV ETH_WS_PORT=$ETH_WS_PORT
 
 ARG ETH_NETWORK_ID
 ENV ETH_NETWORK_ID=$ETH_NETWORK_ID
