--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,7 +92,8 @@ jobs:
             cd infrastructure/kube/templates/keep-client/initcontainer/provision-keep-client
             docker build \
               --build-arg ETH_HOSTNAME=$ETH_HOSTNAME \
-              --build-arg ETH_HOST_PORT=$ETH_HOST_PORT \
+              --build-arg ETH_WS_PORT=$ETH_WS_PORT \
+              --build-arg ETH_RPC_PORT=$ETH_RPC_PORT \
               --build-arg ETH_NETWORK_ID=$ETH_NETWORK_ID \
               --build-arg CONTRACT_OWNER_ETH_ACCOUNT_ADDRESS=$CONTRACT_OWNER_ETH_ACCOUNT_ADDRESS \
               -t $GCR_REGISTRY_URL/$GOOGLE_PROJECT_ID/keep-client-initcontainer .
