StakingProxy config key was updated to reflect contract name

--- a/infrastructure/kube/templates/keep-client/initcontainer/provision-keep-client/keep-client-bootstrap-peer-template.toml
+++ b/infrastructure/kube/templates/keep-client/initcontainer/provision-keep-client/keep-client-bootstrap-peer-template.toml
@@ -14,7 +14,7 @@
     # Hex-encoded address of KeepGroup contract
     KeepGroup = "Set by Kube"
     # StakingProxy
-    Staking = "Set by Kube"
+    StakingProxy = "Set by Kube"
 
 [LibP2P]
   Seed = "Set by Kube"
