--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -218,7 +218,7 @@ workflows:
       - build_initcontainer:
           filters:
             branches:
-              only: master
+              only: debug-failed-dkg-publication
           context: keep-dev
           requires:
             - migrate_contracts
@@ -226,14 +226,14 @@ workflows:
       - migrate_contracts:
           filters:
             branches:
-              only: master
+              only: debug-failed-dkg-publication
           context: keep-dev
           requires:
             - build_client_and_test_go
       - publish_docker_images:
           filters:
             branches:
-              only: master
+              only: debug-failed-dkg-publication
           context: keep-dev
           requires:
             - build_client_and_test_go
