--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
  - repo: https://github.com/keep-network/pre-commit-golang.git
-   rev: c23a18
+   rev: 4cc73f21101f9da1208719b02bbbe0a4c491497e
    hooks:
     - id: go-imports
     - id: go-vet
