--- a/test/config.toml
+++ b/test/config.toml
@@ -12,7 +12,7 @@
 
 [ethereum.ContractAddresses]
 	KeepRandomBeaconFrontend = "0x639deb0dd975af8e4cc91fe9053a37e4faf37649"
-	KeepRandomBeaconBackend = "0xcf64c2a367341170cb4e09cf8c0ed137d8473ceb"
+	KeepRandomBeaconOperator = "0xcf64c2a367341170cb4e09cf8c0ed137d8473ceb"
 
 [libp2p]
 	Port = 27001
