--- a/infrastructure/kube/keep-dev/keep-client/config/keep-client-standard-peer-0.toml
+++ b/infrastructure/kube/keep-dev/keep-client/config/keep-client-standard-peer-0.toml
@@ -11,8 +11,8 @@
   KeyFile            = "/mnt/eth-data/eth-keyfile"
 
 [ethereum.ContractAddresses]
-  # Hex-encoded address of KeepRandomBeaconFrontend contract
-  KeepRandomBeaconFrontend = "0x9d28652e7777946a5Cf1E738E38024cb14993be9"
+  # Hex-encoded address of KeepRandomBeaconService contract
+  KeepRandomBeaconService = "0x9d28652e7777946a5Cf1E738E38024cb14993be9"
   # Hex-encoded address of KeepRandomBeaconOperator contract
   KeepRandomBeaconOperator = "0xc9e8CA4765A797C2d614a87de000b35240b86610"
   # StakingProxy
