--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -215,12 +215,12 @@ workflows:
   build_test_migrate_publish:
     jobs:
       - build_client_and_test_go:
-          context: keep-dev
+          context: keep-test
       - build_initcontainer:
 #          filters:
 #            branches:
 #              only: master
-          context: keep-dev
+          context: keep-test
           requires:
             - migrate_contracts
             - build_client_and_test_go
@@ -228,14 +228,14 @@ workflows:
 #          filters:
 #            branches:
 #              only: master
-          context: keep-dev
+          context: keep-test
           requires:
             - build_client_and_test_go
       - publish_docker_images:
 #          filters:
 #            branches:
 #              only: master
-          context: keep-dev
+          context: keep-test
           requires:
             - build_client_and_test_go
             - build_initcontainer
