--- a/infrastructure/kube/keep-test/keep-client-bootstrap-peer-0.yaml
+++ b/infrastructure/kube/keep-test/keep-client-bootstrap-peer-0.yaml
@@ -2,6 +2,20 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: keep-client-bootstrap-peer-0-tcp
+spec:
+  type: LoadBalancer
+  ports:
+  - name: keep-client-bootstrap-peer-0-tcp-port
+    port: 3919
+    targetPort: 3919
+  selector:
+    app: keep-client
+    type: bootstrap-peer-0
+---
+apiVersion: v1
+kind: Service
+metadata:
   name: keep-client-bootstrap-peer-0
   labels:
     app: keep-client
