--- a/infrastructure/kube/keep-test/keep-client-standard-peer-2.yaml
+++ b/infrastructure/kube/keep-test/keep-client-standard-peer-2.yaml
@@ -2,6 +2,20 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: keep-client-standard-peer-2-tcp
+spec:
+  type: LoadBalancer
+  ports:
+  - name: keep-client-standard-peer-2-tcp-port
+    port: 3919
+    targetPort: 3919
+  selector:
+    app: keep-client
+    type: standard-peer-2
+---
+apiVersion: v1
+kind: Service
+metadata:
   name: keep-client-standard-peer-2
   labels:
     app: keep-client
