--- a/infrastructure/kube/keep-test/keep-client-standard-peer-3.yaml
+++ b/infrastructure/kube/keep-test/keep-client-standard-peer-3.yaml
@@ -2,7 +2,21 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: keep-client-standard-peer-3
+  name: keep-client-standard-peer-3-tcp
+spec:
+  type: LoadBalancer
+  ports:
+  - name: keep-client-standard-peer-3-tcp-port
+    port: 3919
+    targetPort: 3919
+  selector:
+    app: keep-client
+    type: standard-peer-3
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: keep-client-standard-peer-3-internal
   labels:
     app: keep-client
     type: standard-peer-3
