--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -219,7 +219,7 @@ workflows:
       - build_initcontainer:
           filters:
             branches:
-              only: master
+              only: upgradeable-contract-components-build-test
           context: keep-dev
           requires:
             - migrate_contracts
@@ -227,14 +227,14 @@ workflows:
       - migrate_contracts:
           filters:
             branches:
-              only: master
+              only: upgradeable-contract-components-build-test
           context: keep-dev
           requires:
             - build_client_and_test_go
       - publish_docker_images:
           filters:
             branches:
-              only: master
+              only: upgradeable-contract-components-build-test
           context: keep-dev
           requires:
             - build_client_and_test_go
