Remove staking proxy
We don't need the proxy anymore since token grants will be staked just as
normal ERC20 tokens on the Token Staking contract.

--- a/infrastructure/kube/templates/keep-client/initcontainer/provision-keep-client/keep-client-bootstrap-peer-template.toml
+++ b/infrastructure/kube/templates/keep-client/initcontainer/provision-keep-client/keep-client-bootstrap-peer-template.toml
@@ -11,8 +11,8 @@
   [ethereum.ContractAddresses]
     # Hex-encoded address of KeepRandomBeaconOperator contract
     KeepRandomBeaconOperator = "Set by Kube"
-    # StakingProxy
-    StakingProxy = "Set by Kube"
+    # TokenStaking
+    TokenStaking = "Set by Kube"
 
 [LibP2P]
   Seed = "Set by Kube"
