--- a/config.toml.SAMPLE
+++ b/config.toml.SAMPLE
@@ -13,8 +13,8 @@
 [ethereum.ContractAddresses]
 	# Hex-encoded address of KeepRandomBeaconOperator contract
 	KeepRandomBeaconOperator = "0xBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB"
-	# Hex-encoded address of StakingProxy contract
-	StakingProxy = "0xCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC"
+	# Hex-encoded address of TokenStaking contract
+	TokenStaking = "0xCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC"
 
 # Non-bootstrap node connecting to an existing network.
 # [LibP2P]
