Adjustments based on Kuba feedback and new image pull permissions We've tuned the NODE_NAME env var to reflect the actual assigned node name.  The result of this is a cosmetic change on the ETH config side where we set identity via NODE_NAME.  Identity is just a custom name for an ETH node.  We've also removed the image pull secret from these deployments.  We now authorize the default service account for keep-test as a read-only member on the image repository in keep-dev.  This allows us to access the buckets images without issue and extra confguration.

--- a/infrastructure/kube/keep-test/eth-dashboard.yaml
+++ b/infrastructure/kube/keep-test/eth-dashboard.yaml
@@ -8,7 +8,7 @@ metadata:
     kubernetes.io/ingress.allow-http: "true"
 spec:
   backend:
-    # This assumes http-svc exists and routes to healthy endpoints
+    # This assumes service eth-dashboard-http exists and routes to healthy endpoints
     serviceName: eth-dashboard-http
     servicePort: 8080
 ---
@@ -19,7 +19,7 @@ metadata:
 spec:
   type: NodePort
   ports:
-  - name: atlantis-https-port
+  - name: eth-dashboard-http-port
     port: 8080
     targetPort: 3000
   selector:
@@ -61,8 +61,6 @@ spec:
     spec:
       securityContext:
         fsGroup: 1000
-      imagePullSecrets:
-      - name: google-container-registry-auth        
       containers:
       - name: eth-dashboard
         image: gcr.io/keep-dev-fe24/eth-dashboard-node
