--- a/infrastructure/kube/keep-test/eth-tx-nodes.yaml
+++ b/infrastructure/kube/keep-test/eth-tx-nodes.yaml
@@ -16,32 +16,6 @@ spec:
     app: geth
     type: tx
 ---
-apiVersion: v1
-kind: Service
-metadata:
-  name: eth-tx-internal
-  labels:
-    app: geth
-    type: tx
-spec:
-  ports:
-  - port: 8545
-    targetPort: 8545
-    name: tcp-8545
-  - port: 8546
-    targetPort: 8546
-    name: tcp-8546
-  - port: 30303
-    targetPort: 30303
-    name: tcp-30303
-  - port: 30303
-    targetPort: 30303
-    name: udp-30303
-    protocol: UDP
-  selector:
-    app: geth
-    type: tx
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -63,8 +37,6 @@ spec:
     spec:
       securityContext:
         fsGroup: 1000
-      imagePullSecrets:
-      - name: google-container-registry-auth
       containers:
       - name: tx
         image: gcr.io/keep-dev-fe24/eth-geth-node
@@ -80,7 +52,7 @@ spec:
         - name: NODE_NAME
           valueFrom:
             fieldRef:
-              fieldPath: metadata.name
+              fieldPath: spec.nodeName
         - name: HOST_IP
           valueFrom:
             fieldRef:
