Default to debug log level for keep-dev containers

--- a/infrastructure/kube/keep-dev/keep-client-standard-peer-2.yaml
+++ b/infrastructure/kube/keep-dev/keep-client-standard-peer-2.yaml
@@ -61,6 +61,8 @@ spec:
               secretKeyRef:
                 name: eth-account-passphrase
                 key: account-passphrase
+          - name: LOG_LEVEL
+            value: debug
         volumeMounts:
           - name: keep-client-standard-peer-2
             mountPath: /mnt/keep-client/config
