Fix broken code generation for Token Staking contract
Avoiding unnamed returns fixes this, also removing implementation suffix
since staking contract is not upgradeable via eternal storage.

--- a/pkg/chain/gen/Makefile
+++ b/pkg/chain/gen/Makefile
@@ -10,10 +10,10 @@ contract_stems := $(notdir $(basename $(solidity_files)))
 # files with .abi suffix.
 abi_files := $(addprefix abi/,$(addsuffix .abi,$(contract_stems)))
 abigen_files := $(addprefix abi/,$(addsuffix .go,$(contract_stems)))
-# *ImplV1.go files will get generated into clean Keep contract bindings, as will
-# the Staking*.go contract(s). The corresponding contract filenames will drop
-# the ImplV1, if it exists, and live in the contract/ directory.
-clean_contract_stems := $(filter %ImplV1,$(contract_stems)) $(filter %Operator,$(contract_stems)) $(filter Staking%,$(contract_stems)) $(filter TokenGrant, $(contract_stems))
+# *ImplV1.go files will get generated into clean Keep contract bindings, the
+# corresponding contract filenames will drop the ImplV1, if it exists, and live
+# in the contract/ directory.
+clean_contract_stems := $(filter %ImplV1,$(contract_stems)) $(filter %Operator,$(contract_stems)) $(filter TokenStaking, $(contract_stems)) $(filter TokenGrant, $(contract_stems))
 contract_files := $(addprefix contract/,$(addsuffix .go,$(subst ImplV1,,$(clean_contract_stems))))
 
 all: gen_contract_go gen_abi_go
@@ -46,8 +46,8 @@ contract/%.go cmd/%.go: abi/%ImplV1.abi abi/%ImplV1.go abi/%.go *.tmpl *.go
 contract/%Operator.go cmd/%Operator.go: abi/%Operator.abi abi/%Operator.go *.tmpl *.go
 	go run ./ $< contract/$*Operator.go cmd/$*Operator.go
 
-contract/Staking%.go cmd/Staking%.go: abi/Staking%.abi abi/Staking%.go *.tmpl *.go
-	go run ./ $< contract/Staking$*.go cmd/Staking$*.go
+contract/TokenStaking.go cmd/TokenStaking.go: abi/TokenStaking.abi abi/TokenStaking.go *.tmpl *.go
+	go run ./ $< contract/TokenStaking.go cmd/TokenStaking.go
 
 contract/TokenGrant.go cmd/TokenGrant.go: abi/TokenGrant.abi abi/TokenGrant.go *.tmpl *.go
 	go run ./ $< contract/TokenGrant.go cmd/TokenGrant.go
