--- a/infrastructure/kube/keep-test/keep-client-standard-peer-0.yaml
+++ b/infrastructure/kube/keep-test/keep-client-standard-peer-0.yaml
@@ -35,7 +35,7 @@ spec:
       initContainers:
       - name: initcontainer-provision-keep-client
         image: gcr.io/keep-test-f3e0/keep-client-initcontainer
-        env:
+        env:          
           - name: KEEP_CLIENT_TYPE
             value: standard
           - name: KEEP_CLIENT_ETH_ACCOUNT_PASSWORD
@@ -53,6 +53,8 @@ spec:
         ports:
           - containerPort: 3919
         env:
+          - name: LOG_LEVEL
+            value: debug          
           - name: KEEP_ETHEREUM_PASSWORD
             valueFrom:
               secretKeyRef:
