--- a/infrastructure/kube/keep-test/keep-client-standard-peer-3.yaml
+++ b/infrastructure/kube/keep-test/keep-client-standard-peer-3.yaml
@@ -53,6 +53,8 @@ spec:
         ports:
           - containerPort: 3919
         env:
+          - name: LOG_LEVEL
+            value: debug          
           - name: KEEP_ETHEREUM_PASSWORD
             valueFrom:
               secretKeyRef:
