Timeout for job runs so that we don't keep dead runs forever
In our current state if we have a job that doesn't return a relay entry
it hangs around in state "running" forever.  This is resulting in job
containers piling up.  Here we add a killswitch for job containers
that's set to 10 min.  This **should** be plenty of time for a well run
relay request to return an entry.

--- a/infrastructure/kube/keep-test/keep-client-relay-request-submitter.yaml
+++ b/infrastructure/kube/keep-test/keep-client-relay-request-submitter.yaml
@@ -9,7 +9,12 @@ metadata:
 spec:
   schedule: '*/5 * * * *'
   jobTemplate:
+    metadata:
+      labels:
+        app: keep-network
+        type: relay-request-submitter
     spec:
+      activeDeadlineSeconds: 600
       template:
         spec:
           initContainers:
