--- a/infrastructure/kube/keep-dev/keep-client-standard-peer.yaml
+++ b/infrastructure/kube/keep-dev/keep-client-standard-peer.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: keep-client-standard-peer-1
+  name: keep-client-standard-peer
   labels:
     app: keep-client
-    type: standard-peer-1
+    type: standard-peer
 spec:
   ports:
   - port: 3919
@@ -13,27 +13,27 @@ spec:
     name: tcp-3919
   selector:
     app: keep-client
-    type: standard-peer-1
+    type: standard-peer
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: keep-client-standard-peer-1
+  name: keep-client-standard-peer
   labels:
     keel.sh/policy: all
     app: keep-client
-    type: standard-peer-1
+    type: standard-peer
 spec:
-  replicas: 1
+  replicas: 5
   selector:
     matchLabels:
       app: keep-client
-      type: standard-peer-1
+      type: standard-peer
   template:
     metadata:
       labels:
         app: keep-client
-        type: standard-peer-1
+        type: standard-peer
     spec:
       initContainers:
       - name: initcontainer-provision-keep-client
@@ -47,11 +47,11 @@ spec:
                 name: eth-account-passphrase
                 key: account-passphrase
         volumeMounts:
-          - name: keep-client-standard-peer-1
+          - name: keep-client-standard-peer
             mountPath: /mnt/keep-client/config
         command: ["node", "/tmp/provision-keep-client.js"]
       containers:
-      - name: keep-client-standard-peer-1
+      - name: keep-client-standard-peer
         image: gcr.io/keep-dev-fe24/keep-client
         ports:
           - containerPort: 3919
@@ -64,18 +64,18 @@ spec:
           - name: LOG_LEVEL
             value: debug
         volumeMounts:
-          - name: keep-client-standard-peer-1
+          - name: keep-client-standard-peer
             mountPath: /mnt/keep-client/config
         command: ["keep-client", "-config", "/mnt/keep-client/config/keep-client-config.toml", "start"]
       volumes:
-      - name: keep-client-standard-peer-1
+      - name: keep-client-standard-peer
         persistentVolumeClaim:
-          claimName: keep-client-standard-peer-1
+          claimName: keep-client-standard-peer
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: keep-client-standard-peer-1
+  name: keep-client-standard-peer
 spec:
   accessModes:
     - ReadWriteOnce
