--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,6 +152,22 @@ jobs:
           registry-url: $GCR_REGISTRY_URL
           image: keep-client
           tag: latest
+  publish_contract_data:
+    executor: gcp-gcr/default
+    steps:
+      - attach_workspace:
+          at: /tmp/keep-client
+      - gcp-gcr/gcr-auth:
+        google-project-id: GOOGLE_PROJECT_ID
+        google-compute-zone: GOOGLE_COMPUTE_ZONE_A
+        # This param doesn't actually set anything, leaving here as a reminder to check when they fix it.
+        gcloud-service-key: GCLOUD_SERVICE_KEY   
+      - run:
+          name: Upload contract data
+          command: |
+            cd /tmp/keep-client/contracts
+            gsutil -m cp * gs://keep-dev-contract-data
+
   generate_docs_tex:
     docker:
       - image: keepnetwork/texlive:3
@@ -239,6 +255,11 @@ workflows:
           requires:
             - build_client_and_test_go
             - build_initcontainer
+            - migrate_contracts
+      - publish_contract_data:
+          context: keep-dev
+          requires:
+            - build_client_and_test_go
             - migrate_contracts
   docs:
     jobs:
