--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,15 +154,16 @@ jobs:
           image: keep-client
           tag: latest
   publish_contract_data:
-    executor: gcp-cli/google
+    executor: gcp-cli/default
     steps:
       - attach_workspace:
           at: /tmp/keep-client
-      - gcp-cli/install_and_initialize_cli:
+      - gcp-cli/initialize:
           google-project-id: GOOGLE_PROJECT_ID
           google-compute-zone: GOOGLE_COMPUTE_ZONE_A
           # This param doesn't actually set anything, leaving here as a reminder to check when they fix it.
-          gcloud-service-key: GCLOUD_SERVICE_KEY   
+          gcloud-service-key: GCLOUD_SERVICE_KEY
+      - gcp-cli/install
       - run:
           name: Upload contract data
           command: |
