--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -235,30 +235,33 @@ workflows:
       - build_client_and_test_go:
           context: keep-dev
       - build_initcontainer:
-#          filters:
-#            branches:
-#              only: master
+          filters:
+            branches:
+              only: master
           context: keep-dev
           requires:
             - migrate_contracts
             - build_client_and_test_go
       - migrate_contracts:
-#          filters:
-#            branches:
-#              only: master
+          filters:
+            branches:
+              only: master
           context: keep-dev
           requires:
             - build_client_and_test_go
       - publish_docker_images:
- #         filters:
- #           branches:
- #             only: master
+          filters:
+            branches:
+              only: master
           context: keep-dev
           requires:
             - build_client_and_test_go
             - build_initcontainer
             - migrate_contracts
       - publish_contract_data:
+          filters:
+            branches:
+              only: master        
           context: keep-dev
           requires:
             - build_client_and_test_go
