--- a/contracts/solidity/package.json
+++ b/contracts/solidity/package.json
@@ -28,6 +28,7 @@
     "babel-preset-stage-2": "^6.18.0",
     "babel-preset-stage-3": "^6.17.0",
     "babel-register": "^6.26.0",
+    "eth-gas-reporter": "^0.2.9",
     "ethereumjs-abi": "^0.6.5",
     "solc": "^0.5.7",
     "truffle": "^5.0.13",
