--- a/infrastructure/kube/keep-dev/tbtc-electrumx-server.yaml
+++ b/infrastructure/kube/keep-dev/tbtc-electrumx-server.yaml
@@ -71,6 +71,10 @@ spec:
             value: BitcoinSegwit
           - name: NET
             value: testnet
+          - name: COST_SOFT_LIMIT
+            value: '0'
+          - name: COST_HARD_LIMIT
+            value: '0'
           - name: LOG_LEVEL
             value: debug
         volumeMounts:
