--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -158,7 +158,7 @@ jobs:
     steps:
       - attach_workspace:
           at: /tmp/keep-client
-      - gcp-cli/install        
+      - gcp-cli/install
       - gcp-cli/initialize:
           google-project-id: GOOGLE_PROJECT_ID
           google-compute-zone: GOOGLE_COMPUTE_ZONE_A
@@ -168,7 +168,7 @@ jobs:
           name: Upload contract data
           command: |
             cd /tmp/keep-client/contracts
-            gsutil -m cp * gs://keep-dev-contract-data
+            gsutil -m cp * gs://$GOOGLE_PROJECT_NAME-contract-data
 
   generate_docs_tex:
     docker:
@@ -259,10 +259,10 @@ workflows:
             - build_initcontainer
             - migrate_contracts
       - publish_contract_data:
-          filters:
-            branches:
-              only: master        
-          context: keep-dev
+#          filters:
+#            branches:
+#              only: master
+          context: keep-test
           requires:
             - build_client_and_test_go
             - migrate_contracts
