--- a/infrastructure/kube/keep-test/keep-client-standard-peer.yaml
+++ b/infrastructure/kube/keep-test/keep-client-standard-peer.yaml
@@ -2,35 +2,47 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: keep-client-standard-peer-2
-spec:
-  type: LoadBalancer
-  ports:
-  - name: keep-client-standard-peer-2-tcp-port
-    port: 3919
-    targetPort: 3919
-  selector:
-    app: keep-client
-    type: standard-peer-2
----
-apiVersion: extensions/v1beta1
-kind: Deployment
-metadata:
-  name: keep-client-standard-peer-2
+  name: keep-client-standard-peer
   labels:
     app: keep-client
-    type: standard-peer-2
+    type: standard-peer
 spec:
-  replicas: 1
+  ports:
+  - port: 3919
+    targetPort: 3919
+    name: tcp-3919
+  selector:
+    app: keep-client
+    type: standard-peer
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: keep-client-standard-peer
+  labels:
+    keel.sh/policy: all
+    app: keep-client
+    type: standard-peer
+spec:
+  replicas: 5
   selector:
     matchLabels:
       app: keep-client
-      type: standard-peer-2
+      type: standard-peer
+  serviceName: keep-client-standard-peer
+  volumeClaimTemplates:
+  - metadata:
+      name: keep-client-standard-peer
+    spec:
+      accessModes: [ReadWriteOnce]
+      resources:
+        requests:
+          storage: 5Mi
   template:
     metadata:
       labels:
         app: keep-client
-        type: standard-peer-2
+        type: standard-peer
     spec:
       initContainers:
       - name: initcontainer-provision-keep-client
@@ -44,38 +56,24 @@ spec:
                 name: eth-account-passphrase
                 key: eth-account-passphrase
         volumeMounts:
-          - name: keep-client-standard-peer-2
+          - name: keep-client-standard-peer
             mountPath: /mnt/keep-client/config
         command: ["node", "/tmp/provision-keep-client.js"]
       containers:
-      - name: keep-client-standard-peer-2
+      - name: keep-client-standard-peer
         image: gcr.io/keep-test-f3e0/keep-client
         ports:
           - containerPort: 3919
         env:
-          - name: LOG_LEVEL
-            value: debug          
           - name: KEEP_ETHEREUM_PASSWORD
             valueFrom:
               secretKeyRef:
                 name: eth-account-passphrase
                 key: eth-account-passphrase
+          - name: LOG_LEVEL
+            value: debug
         volumeMounts:
-          - name: keep-client-standard-peer-2
+          - name: keep-client-standard-peer
             mountPath: /mnt/keep-client/config
         command: ["keep-client", "-config", "/mnt/keep-client/config/keep-client-config.toml", "start"]
-      volumes:
-      - name: keep-client-standard-peer-2
-        persistentVolumeClaim:
-          claimName: keep-client-standard-peer-2
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: keep-client-standard-peer-2
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 5Mi
+
