--- a/infrastructure/kube/keep-test/keep-client-standard-peer.yaml
+++ b/infrastructure/kube/keep-test/keep-client-standard-peer.yaml
@@ -7,6 +7,7 @@ metadata:
     app: keep-client
     type: standard-peer
 spec:
+  type: LoadBalancer
   ports:
   - port: 3919
     targetPort: 3919
